# spectral-temporal-curriculum-molecular-gap-prediction

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
notebooks/: exploration.ipynb
results/: NOTES.md  results.json  results_summary.json
scripts/: evaluate.py  predict.py  train.py
src/spectral_temporal_curriculum_molecular_gap_prediction/: __init__.py
src/spectral_temporal_curriculum_molecular_gap_prediction/data/: __init__.py  loader.py  preprocessing.py
src/spectral_temporal_curriculum_molecular_gap_prediction/evaluation/: __init__.py  metrics.py
src/spectral_temporal_curriculum_molecular_gap_prediction/models/: __init__.py  components.py  model.py
src/spectral_temporal_curriculum_molecular_gap_prediction/training/: __init__.py  trainer.py
src/spectral_temporal_curriculum_molecular_gap_prediction/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_config_comprehensive.py  test_data.py  test_data_simple.py  test_model.py  test_model_comprehensive.py  test_model_simple.py  test_preprocessing_comprehensive.py  test_training.py  test_training_simple.py
