[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-temporal-curriculum-molecular-gap-prediction"
version = "0.1.0"
description = "A research framework combining spectral graph wavelets with temporal curriculum learning for HOMO-LUMO gap prediction on PCQM4Mv2"
authors = [
    {name = "A-SHOJAEI"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["machine-learning", "graph-neural-networks", "molecular-property-prediction", "curriculum-learning", "spectral-graph-theory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "pytorch-lightning>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "networkx>=2.8",
    "ogb>=1.3.0",
    "scikit-learn>=1.0.0",
    "torchmetrics>=0.11.0",
    "pyyaml>=6.0",
    "mlflow>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "plotly>=5.0.0",
    "py3Dmol>=2.0.0",
    "nglview>=3.0.0",
]
all = [
    "spectral-temporal-curriculum-molecular-gap-prediction[dev,notebook]"
]

[project.urls]
Homepage = "https://github.com/A-SHOJAEI/spectral-temporal-curriculum-molecular-gap-prediction"
Repository = "https://github.com/A-SHOJAEI/spectral-temporal-curriculum-molecular-gap-prediction"

[project.scripts]
stc-train = "spectral_temporal_curriculum_molecular_gap_prediction.scripts.train:main"
stc-evaluate = "spectral_temporal_curriculum_molecular_gap_prediction.scripts.evaluate:main"

[tool.setuptools]
packages = ["spectral_temporal_curriculum_molecular_gap_prediction"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"spectral_temporal_curriculum_molecular_gap_prediction" = ["configs/*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".venv",
    ".tox",
    ".eggs",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "torch_geometric.*",
    "dgl.*",
    "ogb.*",
    "rdkit.*",
    "networkx.*",
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=spectral_temporal_curriculum_molecular_gap_prediction",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]